fix: learned to use predefined style elements (text align center in links)

--- a/styles.css
+++ b/styles.css
@@ -101,3 +101,20 @@ h1{
 .ow{
     background-color: var(--off-white);
 }
+
+/**Footer**/
+
+.footer {
+    background-color: var(--primary-color);
+    padding: 2rem 1rem;
+    color: white;
+    text-align: center;
+    border-top-right-radius: 1rem;
+}
+.footer .link {
+    color: white;
+}
+.footer ul{
+    
+    padding-inline-start: 0px;
+}
